2006-08-28  Richard Levitte  <richard@levitte.org>

	* monotone.cc, i18n.h (localize_monotone): New function that does
	the locale and gettext initialization if it isn't already done.
	This can be called from anywhere, even from code that's run before
	main().
	* options.cc (option::localize_string): New function that calls
	localize_monotone(), then localizes a string.  This is currently
	exclusively used by...
	(GOPT, COPT): ... these macros, so option descriptions get
	translated properly.

2006-08-28  Richard Levitte  <richard@levitte.org>

	* po/POTFILES.in: Add options_list.hh, since it contains a lot
	of translatable text.  These strings were previously in
	monotone.cc.
	* po/sv.po: Updated automatically.

2006-08-28  Richard Levitte  <richard@levitte.org>

	* po/sv.po: A few fuzzies to fix.

2006-08-28  Thomas Moschny  <thomas.moschny@gmx.de>

	* m4/ax_create_stdint_h.m4 (ac_cv_stdint_message): Change the
	still not portable `head -n 1' into a `sed 1q'.

2006-08-28  Thomas Moschny  <thomas.moschny@gmx.de>

	* m4/ax_create_stdint_h.m4 (ac_cv_stdint_message): Correct
	non-portable option to the `head' command.

2006-08-27  Nathaniel Smith  <njs@pobox.com>

	* tests/status: Add indentation to match changes in output
	format.
	* cmd_ws_commit.cc (status): Remove unsightly extra \n.

2006-08-27  Nathaniel Smith  <njs@pobox.com>

	* database.cc (put_version): Add some MM()'s, in case the
	invariant in this function fails again (as reported on the mailing
	list).

2006-08-25  Nathaniel Smith  <njs@pobox.com>

	* cmd_ws_commit.cc (status): Print current branch, and parent rev,
	in 'status'.

2006-08-24  Richard Levitte  <richard@levitte.org>

	* po/ja.po: Change the number of possible plurals to 2.
	This was done with permission from the official JA
	translator.

2006-08-25  Matt Johnston  <matt@ucc.asn.au>

	* options.hh: workaround for gcc < 3.4 parse error on
	vv.as<T)();

2006-08-24  Thomas Moschny <thomas.moschny@gmx.de>
