@@ -1,5 +1,10 @@
 2006-08-28  Richard Levitte  <richard@levitte.org>
 
+	* automate.cc (AUTOMATE(get_option)): New automate command to
+	fetch values from _MTN/options in a supported manner.
+
+2006-08-28  Richard Levitte  <richard@levitte.org>
+
 	* monotone.cc, i18n.h (localize_monotone): New function that does
 	the locale and gettext initialization if it isn't already done.
 	This can be called from anywhere, even from code that's run before
